--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,12 @@ body {
 ::-webkit-scrollbar {
   width: 0;
 }
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+.animate-spin-css {
+  animation: spin 0.3s linear infinite;
+}
